test/should_fail/bin_expression_1.erl
-module(bin_expression_1).

-spec bin_1() -> binary().
bin_1() ->
    <<1:1>>.
